testCalculatePartitions for cassandra ts dao